pipeline/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plantsbywebsphere
  name: plantsbywebsphere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plantsbywebsphere
  template:
    metadata:
      labels:
        app: plantsbywebsphere
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/was-base/plantsbywebsphere:latest
          imagePullPolicy: Always
          name: plantsbywebsphere
          ports:
            - containerPort: 9080
              protocol: TCP
