pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: plantsbywebsphere
  name: plantsbywebsphere
spec:
  path:
    /PlantsByWebSphere
  port:
    targetPort: http
  to:
    kind: Service
    name: plantsbywebsphere
    weight: 100
